--- a/你爱我吗.html
+++ b/你爱我吗.html
@@ -1,44 +1,1 @@
-<html>
-<head>
-<title>You must love me</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="copyright" content="http://www.javascriptbank.com" />
-<script type="text/javascript"> 
-   flag=1;   
-    function f1() 
-    { alert("Yes. you are right "); 
-     } 
-    function f()
-      { if(flag==1)  
-        { Bn.style.top=90;  Bn.style.left=500; flag=2;  
-         } else if(flag==2) 
-       { Bn.style.top=90; Bn.style.left=400; flag=3;
-        } else if(flag==3) 
-        { Bn.style.top=90; Bn.style.left=300; flag=4;
-      } else if(flag==4) 
-        { Bn.style.top=90; Bn.style.left=200; flag=5;
-      } else if(flag==5) 
-        { Bn.style.top=90; Bn.style.left=100; flag=6;
-      } else if(flag==6) 
-        { Bn.style.top=90; Bn.style.left=50; flag=7;
-      } else if(flag==7) 
-        { Bn.style.top=235; Bn.style.left=50; flag=8;
-      } else if(flag==8) 
-        { Bn.style.top=235; Bn.style.left=100; flag=9;
-      } else if(flag==9) 
-        { Bn.style.top=235; Bn.style.left=200; flag=10;
-      } else if(flag==10) 
-        { Bn.style.top=235; Bn.style.left=360; flag=1;
-      } 
- } </script>
-</head>
-<body>
-<h1 style="position:absolute; left:220px; top:175px; width:auto; height:210px;">Do you love me?</h1>
-<div id="By" style="position:absolute; left:285px; top:235px; width:210px; height:210px;">
-	<input type="button" value=" yes " onclick="f1(undefined)" >
-</div>
-<div id="Bn" style="position:absolute; left:360px; top:235px; width:210px; height:210px;">
-	<input type="button" value=" no " onmouseover="f(undefined)" >
-</div>
-</body>
-</html>
+Hello World
