--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>list</title>
+<meta name="viewport" content="width=device-width, initial-scale=1"><!--网页的宽度自动适应手机屏幕的宽度-->
+<title>wuhaijie的个人博客--交流学习心得</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -15,12 +15,12 @@
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/nprogress.js"></script>
-<script src="js/jquery.lazyload.min.js"></script>
+<script src="js/jquery.lazyload.min.js"></script><!--预加载-->
 <!--[if gte IE 9]>
-<script src="js/html5shiv.min.js" type="text/javascript"></script>
-<script src="js/respond.min.js" type="text/javascript"></script>
-<script src="js/selectivizr-min.js" type="text/javascript"></script>
-<script src="js/js-cookie.js" ></script>
+<script src="js/html5shiv.min.js" type="text/javascript"></script>/*让id低版本浏览器支持html5*/
+<script src="js/respond.min.js" type="text/javascript"></script>/*让ie低版本浏览器支持css3媒体查询*/
+<script src="js/selectivizr-min.js" type="text/javascript"></script>/*同上*/
+<script src="js/js-cookie.js" ></script>/*本博客未应用轻量cookies插件*/
 <![endif]-->
 <!--[if lt IE 9]>
 <script>window.location.href='upgrade-browser.html';</script>
@@ -58,7 +58,7 @@
 	<h3 style="line-height: 1.3">wuhaijie的个人博客</h3>
   </div>
   <article class="excerpt excerpt-1"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-	<header><a class="cat" href="#" title="MZ-NetBlog主题" >仿站<i></i></a>
+	<header><a class="cat" href="#"  >仿站<i></i></a>
 	  <h2><a href="gdut.html"  target="_blank" >广东工业大学官网主页</a></h2>
 	</header>
 	<p class="meta">
@@ -67,25 +67,25 @@
 	<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
   </article>
 	<article class="excerpt excerpt-2"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#" title="MZ-NetBlog主题" >仿站<i></i></a>
-			<h2><a href="#"  target="_blank" >广东工业大学官网主页</a></h2>
+		<header><a class="cat" href="#"  >个人开发<i></i></a>
+			<h2><a href="项目4.html"  target="_blank" >心情随笔app</a></h2>
 		</header>
 		<p class="meta">
 			<time class="time"><i class="glyphicon glyphicon-time"></i> 2018-8-1</time>
 		</p>
-		<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
+		<p class="note">通过点击change按钮随机切换文本，并且不会重复，伴随着背景颜色的切换，喜欢的就赶快截屏咯···另外设置了腾讯qq空间和微博的发布接口，一键分享！</p>
 	</article>
 	<article class="excerpt excerpt-3"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#" title="MZ-NetBlog主题" >仿站<i></i></a>
-			<h2><a href="#"  target="_blank" >广东工业大学官网主页</a></h2>
+		<header><a class="cat" href="#"  >技术心得<i></i></a>
+			<h2><a href="show.html"  target="_blank" >高阶组件开发</a></h2>
 		</header>
 		<p class="meta">
 			<time class="time"><i class="glyphicon glyphicon-time"></i> 2018-8-1</time>
 		</p>
-		<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
+		<p class="note">移动开发react框架，必备的几个高阶组件，适用于复杂UI界面开发</p>
 	</article>
 	<article class="excerpt excerpt-4"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#" title="MZ-NetBlog主题" >仿站<i></i></a>
+		<header><a class="cat" href="#"  >仿站<i></i></a>
 			<h2><a href="#"  target="_blank" >广东工业大学官网主页</a></h2>
 		</header>
 		<p class="meta">
@@ -94,7 +94,7 @@
 		<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
 	</article>
 	<article class="excerpt excerpt-5"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#" title="MZ-NetBlog主题" >仿站<i></i></a>
+		<header><a class="cat" href="#"  >仿站<i></i></a>
 			<h2><a href="#"  target="_blank" >广东工业大学官网主页</a></h2>
 		</header>
 		<p class="meta">
@@ -103,7 +103,7 @@
 		<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
 	</article>
 	<article class="excerpt excerpt-6"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#" title="MZ-NetBlog主题" >仿站<i></i></a>
+		<header><a class="cat" href="#"  >仿站<i></i></a>
 			<h2><a href="#"  target="_blank" >广东工业大学官网主页</a></h2>
 		</header>
 		<p class="meta">
@@ -114,7 +114,7 @@
 
 </div>
 </div>
-
+	<div id="gotop"><a class="gotop"></a></div>
 
 
 <script src="js/bootstrap.min.js"></script>
