--- a/show.html
+++ b/show.html
@@ -5,15 +5,14 @@
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>show</title>
+<title>内容详情</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/nprogress.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-<link rel="apple-touch-icon-precomposed" href="images/icon.png">
-<link rel="shortcut icon" href="images/favicon.ico">
+<link rel="apple-touch-icon-precomposed" href="images/blog.jpg">
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/nprogress.js"></script>
 <script src="js/jquery.lazyload.min.js"></script>
@@ -32,21 +31,14 @@
 <nav class="navbar navbar-default" id="navbar">
 <div class="container">
   <div class="header-topbar hidden-xs link-border">
-	<ul class="site-nav topmenu">
-	  <li><a href="#" >标签云</a></li>
-		<li><a href="#" rel="nofollow" >读者墙</a></li>
-		<li><a href="#" title="RSS订阅" >
-			<i class="fa fa-rss">
-			</i> RSS订阅
-		</a></li>
-	</ul>
+
 	勤记录 懂分享</div>
   <div class="navbar-header">
 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar" aria-expanded="false"> <span class="sr-only"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-	<h1 class="logo hvr-bounce-in"><a href="#" title="木庄网络博客"><img src="images/201610171329086541.png" alt="木庄网络博客"></a></h1>
+	<h1 class="logo hvr-bounce-in"><a href="#" "><img src="images/blog.jpg" alt="博客"></a></h1>
   </div>
   <div class="collapse navbar-collapse" id="header-navbar">
-	<form class="navbar-form visible-xs" action="/Search" method="post">
+	<form class="navbar-form visible-xs" action="#" method="post">
 	  <div class="input-group">
 		<input type="text" name="keyword" class="form-control" placeholder="请输入关键字" maxlength="20" autocomplete="off">
 		<span class="input-group-btn">
@@ -54,15 +46,13 @@
 		</span> </div>
 	</form>
 	<ul class="nav navbar-nav navbar-right">
-	  <li><a data-cont="木庄网络博客" title="木庄网络博客" href="index.html">首页</a></li>
-	  <li><a data-cont="列表页" title="列表页" href="list.html">列表页</a></li>
-	  <li><a data-cont="详细页" title="详细页" href="show.html">详细页</a></li>
-	  <li><a data-cont="404" title="404" href="404.html">404</a></li>
-	  <li><a data-cont="MZ-NetBolg主题" title="MZ-NetBolg主题" href="#" >MZ-NetBolg主题</a></li>
-	  <li><a data-cont="IT技术笔记" title="IT技术笔记" href="#" >IT技术笔记</a></li>
-	  <li><a data-cont="源码分享" title="源码分享" href="#" >源码分享</a></li>
-	  <li><a data-cont="靠谱网赚" title="靠谱网赚" href="#" >靠谱网赚</a></li>
-	  <li><a data-cont="资讯分享" title="资讯分享" href="#" >资讯分享</a></li>
+		<li><a  href="https://github.com/wuhaijie888">首页</a></li>
+		<li><a href="https://github.com/wuhaijie888">我的Github</a></li>
+		<li><a  href="https://codepen.io/wuhaijie888/">我的codepen</a></li>
+		<li><a id="email" href="#">我的邮箱</a></li>
+		<li><a id="computer" href="#" >我的服务器</a></li>
+		<li><a id="game" href="#" >游戏</a></li>
+		<li><a id="warning" href="#" >别点这个</a></li>
 	</ul>
   </div>
 </div>
@@ -72,14 +62,17 @@
 <div class="content-wrap">
 <div class="content">
   <header class="article-header">
-	<h1 class="article-title"><a href="#" title="用DTcms做一个独立博客网站（响应式模板）" >用DTcms做一个独立博客网站（响应式模板）</a></h1>
+	<h1 class="article-title"><a href="#" >高阶组件开发</a></h1>
 	<div class="article-meta"> <span class="item article-meta-time">
-	  <time class="time" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="发表时间：2016-10-14"><i class="glyphicon glyphicon-time"></i> 2016-10-14</time>
-	  </span> <span class="item article-meta-source" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="来源：木庄网络博客"><i class="glyphicon glyphicon-globe"></i> 木庄网络博客</span> <span class="item article-meta-category" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="MZ-NetBlog主题"><i class="glyphicon glyphicon-list"></i> <a href="#" title="MZ-NetBlog主题" >MZ-NetBlog主题</a></span> <span class="item article-meta-views" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="浏览量：219"><i class="glyphicon glyphicon-eye-open"></i> 219</span> <span class="item article-meta-comment" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="评论量"><i class="glyphicon glyphicon-comment"></i> 4</span> </div>
+	  <time class="time" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="发表时间：2016-10-14"><i class="glyphicon glyphicon-time"></i> 2018-8-15</time>
+	  </span> <span class="item article-meta-source" data-toggle="tooltip" data-placement="bottom" title="" ><i class="glyphicon glyphicon-globe"></i> 个人博客</span>
+		<span class="item article-meta-category" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="MZ-NetBlog主题">
+			<i class="glyphicon glyphicon-list"></i> <a href="#" title="MZ-NetBlog主题" >学习心得</a></span>
+		 </div>
   </header>
   <article class="article-content">
-	<p><img data-original="images/201610181557196870.jpg" src="images/201610181557196870.jpg" alt="" /></p>
-	<p>文章效果示例，文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字。</p>
+	<p><img data-original="images/201610181557196870.jpg" src="images/blog.jpg" alt="" /></p>
+	<p>高阶组件开发</p>
 	<pre class="prettyprint lang-cs">代码示例：
 	public static double JieCheng(int number)
 	{
@@ -97,11 +90,28 @@
 		}
 		return result;
 	}</pre>
-	<div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_tieba" data-cmd="tieba" title="分享到百度贴吧"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
+	<div class="bdsharebuttonbox">
+		<a href="#" class="bds_more" data-cmd="more"></a>
+		<a href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url=http://www.baidu.com'" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a>
+		<a href="http://v.t.sina.com.cn" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+		<a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a>
+		<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
+		<a href="#" class="bds_tieba" data-cmd="tieba" title="分享到百度贴吧"></a>
+		<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a>
+	</div>
 
-		  <script>                  window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "32" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=0.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
+		  <script> window._bd_share_config = { "common":
+				  { "bdSnsKey": {},
+					  "bdText": "",
+					  "bdMini": "2",
+					  "bdMiniList": false,
+					  "bdPic": "",
+					  "bdStyle": "1",
+					  "bdSize": "32" },
+			  "share": {} };
+		  with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=0.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
   </article>
-  <div class="article-tags">标签：<a href="#list/2/" rel="tag" >DTcms博客</a><a href="#list/3/" rel="tag" >木庄网络博客</a><a href="#list/4/" rel="tag" >独立博客</a><a href="#list/5/" rel="tag" >修复优化</a>
+  <div class="article-tags">标签：<a href="#" rel="tag" >DTcms博客</a><a href="#" rel="tag" >个人博客</a><a href="#" rel="tag" >独立博客</a><a href="#" rel="tag" >修复优化</a>
 	</div>
   <div class="relates">
 	<div class="title">
@@ -140,8 +150,8 @@
 	</div>
   <div id="postcomments">
 	<ol id="comment_list" class="commentlist">        
-	<li class="comment-content"><span class="comment-f">#2</span><div class="comment-main"><p><a class="address" href="#" rel="nofollow" target="_blank">木庄网络博客</a><span class="time">(2016/10/28 11:41:03)</span><br>不错的网站主题，看着相当舒服</p></div></li>
-	<li class="comment-content"><span class="comment-f">#1</span><div class="comment-main"><p><a class="address" href="#" rel="nofollow" target="_blank">木庄网络博客</a><span class="time">(2016/10/14 21:02:39)</span><br>博客做得好漂亮哦！</p></div></li></ol>
+	<li class="comment-content"><span class="comment-f">#2</span><div class="comment-main"><p><a class="address" href="#" rel="nofollow" target="_blank">个人博客</a><span class="time">(2016/10/28 11:41:03)</span><br>不错的网站主题，看着相当舒服</p></div></li>
+	<li class="comment-content"><span class="comment-f">#1</span><div class="comment-main"><p><a class="address" href="#" rel="nofollow" target="_blank">个人博客</a><span class="time">(2016/10/14 21:02:39)</span><br>博客做得好漂亮哦！</p></div></li></ol>
   </div>
 </div>
 </div>
@@ -155,22 +165,22 @@
 	<div class="tab-content">
 	  <div role="tabpanel" class="tab-pane contact active" id="notice">
 		<h2>日志总数:
-			  888篇
+			  3篇
 		  </h2>
 		  <h2>网站运行:
-		  <span id="sitetime">88天 </span></h2>
+		  <span id="opentime"></span></h2>
 	  </div>
 		<div role="tabpanel" class="tab-pane contact" id="contact">
 		  <h2>QQ:
-			  <a href="" target="_blank" rel="nofollow" data-toggle="tooltip" data-placement="bottom" title="" draggable="false" data-original-title="QQ:577211782">577211782</a>
+			  <a href="#" target="_blank" rel="nofollow" data-toggle="tooltip" data-placement="bottom" title="" draggable="false" data-original-title="QQ:1097351168">1097351168</a>
 		  </h2>
 		  <h2>Email:
-		  <a href="mailto:577211782@qq.com" target="_blank" data-toggle="tooltip" rel="nofollow" data-placement="bottom" title="" draggable="false" data-original-title="Email:577211782@qq.com">577211782@qq.com</a></h2>
+		  <a href="#" target="_parent" data-toggle="tooltip" rel="nofollow" data-placement="bottom" title="" draggable="false" >wuhaijie888@163.com</a></h2>
 	  </div>
 	</div>
   </div>
   <div class="widget widget_search">
-	<form class="navbar-form" action="/Search" method="post">
+	<form class="navbar-form" action="#" method="post">
 	  <div class="input-group">
 		<input type="text" name="keyword" class="form-control" size="35" placeholder="请输入关键字" maxlength="15" autocomplete="off">
 		<span class="input-group-btn">
@@ -229,13 +239,13 @@
   <div class="widget widget_sentence">
 
 <a href="#" target="_blank" rel="nofollow" title="MZ-NetBlog主题" >
-	<img style="width: 100%" src="images/ad.jpg" alt="MZ-NetBlog主题" ></a>
+	<img style="width: 100%" src="images/blog.jpg" alt="MZ-NetBlog主题" ></a>
 
 </div>
   <div class="widget widget_sentence">
 
 <a href="#" target="_blank" rel="nofollow" title="专业网站建设" >
-	<img style="width: 100%" src="images/201610241224221511.jpg" alt="专业网站建设" ></a>
+	<img style="width: 100%" src="images/blog.jpg" alt="专业网站建设" ></a>
 
 </div>
 </aside>
@@ -249,5 +259,15 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.ias.js"></script>
 
+<script type="text/javascript">
+
+    var d = Date.parse("Aug 1, 2018");
+    var nowd=new Date();
+    var long=nowd.getTime()-d;
+    long/=86400000;
+    long=parseInt(long)+1;
+    $("#opentime").html(long+" 天啦！");
+
+</script>
 </body>
 </html>
