--- a/gdut.html
+++ b/gdut.html
@@ -5,6 +5,8 @@
 <title>广东工业大学</title>
 <link rel="stylesheet" href="css/main.css" />
 	<link rel="icon" href="logo.jpg" type="image/x-icon"/>
+ <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 
 </head>
