--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"><!--网页的宽度自动适应手机屏幕的宽度-->
 <title>wuhaijie的个人博客--交流学习心得</title>
 <meta name="keywords" content="">
+	<link rel="icon" href="images/all-logo.png" type="image/x-icon"/>
 <meta name="description" content="">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/nprogress.css">
+<link rel="stylesheet" type="text/css" href="css/nprogress.css"><!--进度条库-->
 <link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -84,14 +85,15 @@
 		</p>
 		<p class="note">移动开发react框架，必备的几个高阶组件，适用于复杂UI界面开发</p>
 	</article>
-	<article class="excerpt excerpt-4"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#"  >仿站<i></i></a>
-			<h2><a href="#"  target="_blank" >广东工业大学官网主页</a></h2>
+	<article class="excerpt excerpt-4"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original
+			="images/201610181739277776.jpg" src="images/201610181739277776.jpg"  style="display: inline;"></a>
+		<header><a class="cat" href="#"  >开发项目<i></i></a>
+			<h2><a href="一路阳光Web%20App/index1.html"  target="_blank" >广东省一路阳光新能源科技有限公司-web app展示页</a></h2>
 		</header>
 		<p class="meta">
-			<time class="time"><i class="glyphicon glyphicon-time"></i> 2018-8-1</time>
+			<time class="time"><i class="glyphicon glyphicon-time"></i> 2018-9-1</time>
 		</p>
-		<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
+		<p class="note">这个项目采用jquerymobile开发框架，加入了丰富的mobile ui以及懒加载图片，使展示页不会过于臃肿。</p>
 	</article>
 	<article class="excerpt excerpt-5"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
 		<header><a class="cat" href="#"  >仿站<i></i></a>
