--- a/一路阳光Web App/公司2.html
+++ b/一路阳光Web App/公司2.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 <title>公司子页</title>
-<link rel="stylesheet" 
-      href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+  <link rel="stylesheet"
+        href="js/jquery.mobile-1.4.5.min.css" />
+
 
   <link rel="icon" href="img/home/logo.png" type="image/x-icon"/>
 </head>
