--- a/一路阳光Web App/公司3.html
+++ b/一路阳光Web App/公司3.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 <title>Persistent Footer Example</title>
-<link rel="stylesheet" 
-      href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+  <link rel="stylesheet"
+        href="js/jquery.mobile-1.4.5.min.css" />
 
   <link rel="icon" href="img/home/logo.png" type="image/x-icon"/>
 </head>
@@ -22,7 +22,7 @@
   <p>
     广东一路阳光新能源科技有限公司<br/>
     地址：名市计星路南126大院<br/>
-    电话：0668－2753222275622218929771137<br/>
+    电话：0668－2753222 2756222 18929771137<br/>
     传真：0668－2756222<br/>
   </p>
   </div>
