--- a/一路阳光Web App/index1.html
+++ b/一路阳光Web App/index1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 <title>一路阳光新能源科技有限公司欢迎您！</title>
 <link rel="stylesheet" 
-      href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+      href="js/jquery.mobile-1.4.5.min.css" />
 
   <link rel="icon" href="img/home/logo.png" type="image/x-icon"/>
 </head>
