--- a/一路阳光Web App/index1.html
+++ b/一路阳光Web App/index1.html
@@ -194,6 +194,10 @@
 
     }
 
+        if(window.navigator.userAgent.indexOf('AppleWebKit') !== -1) {
+            alert('您现在选择的是极速浏览模式，建议开启兼容模式浏览');
+        }
+
 
 </script>
 <script type="text/javascript" src="js/jquery-2.1.3.min.js">
