--- a/一路阳光Web App/公司2.html
+++ b/一路阳光Web App/公司2.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="img/home/logo.png" type="image/x-icon"/>
 </head>
 <style type="text/css">
-  h1{
+  #company2 h1{
     text-align: left;
   }
 .show-title{
@@ -68,7 +68,7 @@
 
 <body>
 
-<div data-role="page">
+<div data-role="page" id="company2">
   <div data-role="header"  >
     <h1>公司一览</h1>
   </div>
