--- a/一路阳光Web App/index1.html
+++ b/一路阳光Web App/index1.html
@@ -58,10 +58,62 @@
   a{
     text-decoration:none;
   }
+  #company2 h1{
+    text-align: left;
+  }
+  .show-title{
+    background-color: green;
+    font-family: 宋体,仿宋;
+    font-size: 15px;
+    width: 18vw;
+    color: yellow;
+  }
+  .gallery {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .gallery:after {
+    clear: both;
+    content: ".";
+    display: block;
+    height: 0;
+    visibility: hidden;
+  }
+
+  .gallery li {
+    float: left;
+    width: 33.3%;
+    height: auto;
+  }
+
+  .gallery li img {
+    display: block;
+    width: 100%;
+
+  }
+
+  .gallery li a {
+    display: block;
+    margin: 5px;
+    border: 1px solid #3c3c3c;
+    text-decoration:none
+  }
+
+  .gallery a h3{
+    width:80px;
+    white-space:nowrap;
+    font-size:1em;
+
+    text-overflow:ellipsis;
+    padding-top:3px;
+
+  }
 </style>
 <body>
 
-<div data-role="page">
+<div data-role="page" id="company1">
 
 
   <div data-role="header" data-position="fixed" >
@@ -110,20 +162,20 @@
         </thead>
         <tbody>
         <tr>
-          <td><a href="公司2.html#com-1">企业信息</a></td>
-          <td><a href="公司2.html#com-4">研发理念</a></td>
-          <td><a href="公司2.html#com-6">千灯下乡计划</a></td>
-          <td><a href="公司2.html#com-7">服务网络</a></td>
-          <td><a href="公司2.html#com-9">公司新闻</a></td>
+          <td><a href="#company2" id="_com-1" onclick="tip();">企业信息</a></td>
+          <td><a href="#company2">研发理念</a></td>
+          <td><a href="#company2">千灯下乡计划</a></td>
+          <td><a href="#company2">服务网络</a></td>
+          <td><a href="#company2">公司新闻</a></td>
         </tr>
         <tr>
-          <td><a href="公司2.html#com-2">企业地位</a></td>
-          <td><a href="公司2.html#com-5">研发实践</a></td>
-          <td><a href="公司2.html#com-8">新能源应用</a></td>
+          <td><a href="#company2">企业地位</a></td>
+          <td><a href="#company2">研发实践</a></td>
+          <td><a href="#company2" id="_com-8" onclick="tip();">新能源应用</a></td>
 
         </tr>
         <tr>
-          <td><a href="公司2.html#com-3">企业理念</a></td>
+          <td><a href="#company2">企业理念</a></td>
 
         </tr>
 
@@ -131,25 +183,186 @@
       </table>
     </div>
 </div>
-<div id="root"></div>
+
   <div data-role="footer" data-position="fixed"
        data-id="footernav" data-theme="a">
     <div data-role="navbar">
       <ul>
         <li>
-          <a href="index1.html"
+          <a href="#company1"
              class="ui-btn-active">首页</a>
         </li>
         <li>
-          <a href="公司2.html">公司一览</a>
+          <a href="#company2">公司一览</a>
         </li>
         <li>
-          <a href="公司3.html">联系我们</a>
+          <a href="#company3">联系我们</a>
         </li>
       </ul>
     </div>
   </div>
 	
+</div>
+
+<div data-role="page" id="company3">
+
+  <div data-role="header">
+    <h1>联系我们</h1>
+  </div>
+
+  <div role="main" class="ui-content">
+    <p>
+      广东一路阳光新能源科技有限公司<br/>
+      地址：名市计星路南126大院<br/>
+      电话：0668－2753222 2756222 18929771137<br/>
+      传真：0668－2756222<br/>
+    </p>
+  </div>
+
+  <div data-role="footer" data-position="fixed" data-id="footernav"
+       data-theme="a">
+    <div data-role="navbar">
+      <ul>
+        <li>
+          <a href="#company1">首页</a>
+        </li>
+        <li>
+          <a href="公司2.html">公司一览</a>
+        </li>
+        <li>
+          <a href="#company3"
+             class="ui-btn-active">联系我们</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+</div>
+
+<div data-role="page" id="company2">
+  <div data-role="header"  >
+    <h1>公司一览</h1>
+  </div>
+  <div class="show-title" id="com-1" >
+    <h1>企业信息</h1>
+  </div>
+  <div role="main" class="ui-content">
+    <p>
+      广东一路阳光新能源科技有限公司注册资金1000万元，成立于2016年10月，是粤西唯一一家具有自主开发、生产、销售、安装、维护为一体的太阳能路灯生产厂家。
+    </p>
+  </div>
+  <div class="show-title" id="com-2">
+    <h1>企业地位</h1>
+  </div>
+  <div role="main" class="ui-content">
+    <p>
+      公司拥有8项智能照明专利，掌握太阳能照明核心科技；公司致力于智慧新能源的研发、应用及推广，
+      2017年3月建成的智能照明服务平台，将在智能照明+ 新农村亮化、城市照明、光伏发电、水务监测、智慧农业、旅游观光、智能交通等细分领域推动智慧城市的快速发展。
+    </p>
+  </div>
+
+  <div class="show-title" id="com-3">
+    <h1>企业理念</h1>
+  </div>
+  <div role="main" class="ui-content">
+    <p>
+      公司2017年协助、配合政府相关部门着力推广“千村亮化”及“光伏扶贫”脱贫工程。
+      计划在2017年为茂名地区1000个以上的村庄安装上一路阳光的第四代智慧太阳能路灯，为100个以上的村委建设光伏电站。
+      目前已有超过100个村委会500条自然村参与到我们的建设项目中。
+    </p>
+    <h3 style="display: inline-block">更多有关项目--广东省茂名市光伏扶贫电站项目(EPC) - 索比光伏网</h3>
+    <a href="#" class="ui-btn ui-corner-all ui-icon-arrow-d ui-btn-icon-notext">图标</a>
+    <a href="https://news.solarbe.com/201710/13/119389.html" data-role="button" data-inline="true">访问新闻</a>
+  </div>
+
+  <div class="show-title" id="com-4">
+    <h1>研发理念</h1>
+  </div>
+  <div role="main" class="ui-content">
+    <p>
+      公司自行研发的太阳能路灯智能储控一体系统，芯片由公司自行研发，工业级32位CPU控制，领先PWM变频充放电，5项国家专利。
+      锂电池采用上市公司A电芯，续航持久。在实际作业环境下，能有效抵抗不良环境。阴雨天下，能正常运行10-15天，按电多少智能配亮度，保证天天亮灯。
+      智控系统性能稳定故少，低压安全有保障，售后及时服旁好，经济合算平市电。
+    </p>
+  </div>
+
+
+  <div class="show-title" id="com-5">
+    <h1>研发实践</h1>
+  </div>
+  　<ul class="gallery">
+  　　<li><a href="#"><img src="img/home/example1.png"><h3>化州市新安镇光伏电站扶贫项目413KW</h3></a></li>
+  　　<li><a href="#"><img src="img/home/example2.png"><h3>高州市马贵镇朗练村光伏电站12KW</h3></a></li>
+  　　<li><a href="#"><img src="img/home/example3.png"><h3>茂南区河之口村委会车田坡小学光伏电站123KW</h3></a></li>
+  　　<li><a href="#"><img src="img/home/example4.png"><h3>双臂灯</h3></a></li>
+  　　<li><a href="#"><img src="img/home/example5.png"><h3>监控照明一体灯</h3></a></li>
+  　　<li><a href="#"><img src="img/home/example6.png"><h3>杀虫灯</h3></a></li>
+  　　<li><a href="#"><img src="img/home/example7.png"><h3>YT-1530/1550(打地)</h3></a></li>
+  　　<li><a href="#"><img src="img/home/example8.png"><h3>YT-1020( 打墙)</h3></a></li>
+  <li><a href="#"><img src="img/home/example9.png"><h3>YT-6030/8050(单臂灯)</h3></a></li>
+</ul>
+
+  <div class="show-title" id="com-6">
+    <h1>千灯下乡计划</h1>
+  </div>
+  <div role="main" class="ui-content">
+    <p>
+      公司2017年协助、配合政府相关部门着力推广“千村亮化”及“光伏扶贫”脱贫工程。计划在2017年为茂名地区1000个以上的村庄安装上一
+      路阳光的第四代智慧太阳能路灯，为100个以上的村委建设光伏电站。目前已有超过100个村委会500条自然村参与到我们的建设项目中。
+    </p>
+  </div>
+  <div class="show-title" id="com-7">
+    <h1>服务网络</h1>
+  </div>
+  <div role="main" class="ui-content">
+    <p>
+      我们提供三年保修服务，可以随时联系工作人员进行维保，维修服务。
+    </p>
+  </div>
+
+  <div class="show-title" id="com-8">
+    <h1>新能源应用</h1>
+  </div>
+  <div role="main" class="ui-content">
+    <p>
+      新能源新生活<br/>
+      分布式光伏电站（阳光银行）<br/>
+      1、收益稳定：年化枚益率10－15％<br/>
+      2、质量保证：电站质保五年，光伏板可用25年。<br/>
+      3、安装同便：届热防<br/>
+      4、售后放心：手机APP管理，故自动报，组件先更換再返修<br/>
+      5、国家扶持：国家地方双重补贴，国家补贴20年<br/>
+    </p>
+  </div>
+
+  <div class="show-title" id="com-9">
+    <h1>公司新闻</h1>
+  </div>
+  <div role="main" class="ui-content">
+    <p>
+      我们新创的铝能照明服务平台，将在智能照明＋新农村亮化、城市照明、水务监测、平市电、
+      智慧农业、旅游光、智能交遇等细分领域推动智城市的快速发展。
+    </p>
+  </div>
+
+  <div data-role="footer" data-position="fixed"
+       data-id="footernav" data-theme="a">
+    <div data-role="navbar">
+      <ul>
+        <li>
+          <a href="#company1">首页</a>
+        </li>
+        <li>
+          <a href="#company2"
+             class="ui-btn-active">公司一览</a>
+        </li>
+        <li>
+          <a href="#company3">联系我们</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
 </div>
 
 </body>
@@ -161,6 +374,7 @@
      * 3、判断当前屏幕的位置（图片的top值和屏幕底部的值），来进行是否显示
      * 图片，如果需要显示的话，把data-original的值给src
      */
+
 
     //获取所有图片
     var imgs = document.querySelectorAll("img.lazy");            //设置滚动事件
@@ -195,9 +409,15 @@
     }
 
         if(window.navigator.userAgent.indexOf('AppleWebKit') !== -1) {
-            alert('您现在选择的是极速浏览模式，建议开启兼容模式浏览');
-        }
 
+           alert("您现在选择的是极速模式，建议开启兼容模式。")
+
+        }
+        var arr=[];
+        function tip() {
+            var x = event.target;
+            arr = x.id.slice(1, 6);
+        }
 
 </script>
 <script type="text/javascript" src="js/jquery-2.1.3.min.js">
