--- a/一路阳光Web App/index1.html
+++ b/一路阳光Web App/index1.html
@@ -64,7 +64,7 @@
   .show-title{
     background-color: green;
     font-family: 宋体,仿宋;
-    font-size: 15px;
+    font-size: 10px;
     width: 18vw;
     color: yellow;
   }
@@ -104,7 +104,7 @@
   .gallery a h3{
     width:80px;
     white-space:nowrap;
-    font-size:1em;
+    font-size:5px;
 
     text-overflow:ellipsis;
     padding-top:3px;
@@ -227,7 +227,7 @@
           <a href="#company1">首页</a>
         </li>
         <li>
-          <a href="公司2.html">公司一览</a>
+          <a href="#company2">公司一览</a>
         </li>
         <li>
           <a href="#company3"
