--- a/一路阳光Web App/index1.html
+++ b/一路阳光Web App/index1.html
@@ -191,7 +191,7 @@
     <div data-role="navbar">
       <ul>
         <li>
-          <a href="#company1"
+          <a href="#company1" data-ajax=“false”
              class="ui-btn-active">首页</a>
         </li>
         <li>
@@ -226,7 +226,7 @@
     <div data-role="navbar">
       <ul>
         <li>
-          <a href="#company1">首页</a>
+          <a href="#company1" data-ajax=“false”>首页</a>
         </li>
         <li>
           <a href="#company2">公司一览</a>
@@ -352,7 +352,7 @@
     <div data-role="navbar">
       <ul>
         <li>
-          <a href="#company1">首页</a>
+          <a href="#company1" data-ajax=“false”>首页</a>
         </li>
         <li>
           <a href="#company2"
