--- a/一路阳光Web App/index1.html
+++ b/一路阳光Web App/index1.html
@@ -9,7 +9,8 @@
   <script type="text/javascript" src="js/jquery-2.1.3.min.js">
   </script>
   <link rel="icon" href="img/home/logo.png" type="image/x-icon"/>
-
+  <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js">
+  </script>
 </head>
 <style type="text/css">
   *{
@@ -119,7 +120,7 @@
       position: absolute;
     }
   }
-  @media only screen and (min-height:900px) {
+  @media only screen and (min-height:750px) {
     .media-img {
       width: 100vw;
       height: auto;
@@ -410,15 +411,20 @@
 window.onload=function () {
     setTimeout(function () {
         $(".main-a").click();
-    },1000);
-}
 
+    },1000);
+   
+}
+var choose=false;
     //获取所有图片
     var imgs = document.querySelectorAll("img.lazy");            //设置滚动事件
-    window.onscroll = lazyloadFn;            //屏幕的高度
+            //屏幕的高度
     var sh = window.innerHeight;
-    console.log(sh);            //刚进来需要先调用下
-    lazyloadFn();            //图片懒加载的方法
+    console.log(sh);
+           //刚进来需要先调用下
+    window.onscroll = lazyloadFn;
+           //图片懒加载的方法
+
     function lazyloadFn () {                //获取滚动的距离
         var st = document.documentElement.scrollTop || window.pageYOffset || document.body.scrollTop;
         var sn = sh + st;                //循环所有的图片
@@ -428,6 +434,7 @@ window.onload=function () {
             }
         }
     }
+
     var flag=true;
     function shownav(){
         if(flag){
@@ -459,6 +466,5 @@ window.onload=function () {
 
 </script>
 
-<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js">
-</script>
+
 </html>
