--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>wuhaijie的个人博客--交流学习心得</title>
 <meta name="keywords" content="">
 	<link rel="icon" href="images/all-logo.png" type="image/x-icon"/>
-<meta name="description" content="">
+<meta name="description" content="吴海杰个人博客，分享学习心得，记录学习历程">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/nprogress.css"><!--进度条库-->
 <link rel="stylesheet" type="text/css" href="css/style.css">
