--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="title">
 	<h3 style="line-height: 1.3">wuhaijie的个人博客</h3>
   </div>
-  <article class="excerpt excerpt-1"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
+  <article class="excerpt excerpt-1"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"  style="display: inline;"></a>
 	<header><a class="cat" href="#"  >仿站<i></i></a>
 	  <h2><a href="gdut.html"  target="_blank" >广东工业大学官网主页</a></h2>
 	</header>
@@ -68,7 +68,7 @@
 	</p>
 	<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
   </article>
-	<article class="excerpt excerpt-2"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
+	<article class="excerpt excerpt-2"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"    style="display: inline;"></a>
 		<header><a class="cat" href="#"  >个人开发<i></i></a>
 			<h2><a href="项目4.html"  target="_blank" >心情随笔app</a></h2>
 		</header>
@@ -77,7 +77,7 @@
 		</p>
 		<p class="note">通过点击change按钮随机切换文本，并且不会重复，伴随着背景颜色的切换，喜欢的就赶快截屏咯···另外设置了腾讯qq空间和微博的发布接口，一键分享！</p>
 	</article>
-	<article class="excerpt excerpt-3"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
+	<article class="excerpt excerpt-3"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"    style="display: inline;"></a>
 		<header><a class="cat" href="#"  >技术心得<i></i></a>
 			<h2><a href="show.html"  target="_blank" >高阶组件开发</a></h2>
 		</header>
@@ -96,23 +96,23 @@
 		</p>
 		<p class="note">这个项目采用jquerymobile开发框架，加入了丰富的mobile ui以及懒加载图片，使展示页不会过于臃肿。</p>
 	</article>
-	<article class="excerpt excerpt-5"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#"  >仿站<i></i></a>
-			<h2><a href="#"  target="_blank" >广东工业大学官网主页</a></h2>
+	<article class="excerpt excerpt-5"><a class="focus" href="项目10.html"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"    style="display: inline;"></a>
+		<header><a class="cat" href="项目10.html"  target="_blank">小游戏<i></i></a>
+			<h2><a href="项目10.html"  target="_blank" >音乐按键记忆</a></h2>
 		</header>
 		<p class="meta">
-			<time class="time"><i class="glyphicon glyphicon-time"></i> 2018-8-1</time>
+			<time class="time"><i class="glyphicon glyphicon-time"></i> 2019-2-25</time>
 		</p>
-		<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
+		<p class="note">仿写github的小项目</p>
 	</article>
-	<article class="excerpt excerpt-6"><a class="focus" href="#"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg" alt="用DTcms做一个独立博客网站（响应式模板）"  style="display: inline;"></a>
-		<header><a class="cat" href="#"  >仿站<i></i></a>
-			<h2><a href="#"  target="_blank" >广东工业大学官网主页</a></h2>
+	<article class="excerpt excerpt-6"><a class="focus" href="智障版井字棋.html"  target="_blank" ><img class="thumb" data-original="images/201610181739277776.jpg" src="images/201610181739277776.jpg"    style="display: inline;"></a>
+		<header><a class="cat" href="智障版井字棋.html"  >小游戏<i></i></a>
+			<h2><a href="智障版井字棋.html"  target="_blank" >智障版井字棋</a></h2>
 		</header>
 		<p class="meta">
-			<time class="time"><i class="glyphicon glyphicon-time"></i> 2018-8-1</time>
+			<time class="time"><i class="glyphicon glyphicon-time"></i> 2019-2-25</time>
 		</p>
-		<p class="note">这个demo没有用到响应式开发模板，只针对pc端写了一套样式，对比对比原网站改进了悬浮图标的z-index属性。</p>
+		<p class="note">没做好战术数组优化，对手全随机，日后改进</p>
 	</article>
 
 </div>
